# XavierOS

./: .gitignore  .npmrc  .railwayignore  .railwayrc  AUTOMATION_README.md  Aaron's Notebook.url  BOLD_MODERN_APPLIED.md  COMPREHENSIVE_ANALYSIS.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_REPORT.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_TROUBLESHOOTING.md  DEPLOY_TO_RAILWAY.md  DEPLOY_TO_VERCEL.ps1  DIAGNOSTIC_REPORT.md  Dockerfile  Document.docx  FORCE_DEPLOY.ps1  ISSUES_AND_FIXES.md  MERGE_AND_DEPLOY.ps1  ONE_CLICK_DEPLOY.md  PYTHON3_DEPLOYMENT_FIX.md  RAILWAY_CRASH_FIX.md  RAILWAY_DEPLOYMENT_CHECKLIST.md  RAILWAY_DEPLOYMENT_VERIFICATION.md  RAILWAY_FIX_APPLIED.md  RAILWAY_SETUP_GUIDE.md  README.md  SETUP_AND_DEPLOY.ps1  TESTING_SUMMARY.md  TEST_RESULTS.md  VERCEL_SETUP_GUIDE.md  VERCEL_VS_RAILWAY.md  VERIFY_DEPLOYMENT.ps1  XAVIEROS_README.md  app.config.timestamp_1761140595879.js  app.config.ts  app.py  arc_recovery_packet.txt  (+28 more)
A5-Browser-Use-v.0.0.5/: QUICK_START_GUIDE.md  RAILWAY_FORENSICS_README.md  SYSTEM_SUMMARY.md  deployment_forensics_agent.py  deployment_forensics_report.json  example_forensics_demo.py  forensics_demo_report_crash.json  railway_forensics_cli.py  setup_railway_deployment.py  test_forensics_system.py
Document Downloads/: Aaron_Johnson_AI_Sales_Resume_v2_Enhanced.docx
Outlook Files/: Outlook1.pst
components/: Button.tsx  DashboardLayout.tsx  IssueTimeline.tsx  LegalRiskCard.tsx  NotificationSettings.tsx  RemediationSuggestions.tsx  ScanResultsOverview.tsx  ScheduleModal.tsx  ServiceOnboardingModal.tsx  ShareReportModal.tsx  ShuffleModal.tsx  (+3 more)
(+505 files in other folders)
